@@ -1,6 +1,5 @@
-DIST pfl-1.7 8203 RMD160 7c8d77a67ed7bf669facaf1252cfa782b5d21c07 SHA1 1ac4aa44cbe1a79a39810bf5f2471b9972c77a42 SHA256 666a7dbe1ca7cd8b0de9d021c2f4a40448a416592343862a50e5c35820e9fd08
-DIST pfl-1.8 8419 RMD160 6d79bf5ecb3fddd2aae18f0cfeae663066f61dc1 SHA1 545c3b0c093613ab5814426320f09088d472b635 SHA256 3ece3a351b96d363ec240d16a264c1aa51080249961affc98b4f7a72d0ead044
-EBUILD pfl-1.7.ebuild 712 RMD160 f5372332290d5afadf5f224c2538b60d6e31bb7b SHA1 2a67363fb9b28a28e5f8f2acd709848eddc57629 SHA256 eec572d86c30bd9caa57caf0821e001f54c8e0ef0f572307bfff96b42b53ce5b
-EBUILD pfl-1.8.ebuild 712 RMD160 f5372332290d5afadf5f224c2538b60d6e31bb7b SHA1 2a67363fb9b28a28e5f8f2acd709848eddc57629 SHA256 eec572d86c30bd9caa57caf0821e001f54c8e0ef0f572307bfff96b42b53ce5b
-MISC ChangeLog 202 RMD160 85d25d93a62dcc4f6e682913ff278ffe4d3156b0 SHA1 2fe520f38917f37e8eaa622333c70c083296b0af SHA256 c6a2b4f09aae1da50be0109d84de33ccbeae8c68005c4b7806c99671c6cb534f
+DIST e-file 2639 RMD160 0206767fd37d3e39188e3dff8e33ae06e89699d1 SHA1 40f4a9737d31baa397f4303ad3e83150263d0cf6 SHA256 731a4c34da0ca03b4434b3209c03b9660d36b07dcaef6d41b3785479dd17d7d4
+DIST pfl 8419 RMD160 6d79bf5ecb3fddd2aae18f0cfeae663066f61dc1 SHA1 545c3b0c093613ab5814426320f09088d472b635 SHA256 3ece3a351b96d363ec240d16a264c1aa51080249961affc98b4f7a72d0ead044
+EBUILD pfl-1.8_p20081201.ebuild 792 RMD160 8843292cb8a40ff6300bf0049fd720e1b1b79047 SHA1 9e446b07d86d62a8bbb288e51e5dd3dfe95b1fe0 SHA256 ff000e88c11d8cc7433791da0fd19a3ce6529970aa0ecc62832278013dec0e28
+MISC ChangeLog 420 RMD160 a9ec5415e5f455ba7a54105277f444a9f91a8029 SHA1 ea103607cfb82a99e31144f201509c70a953d985 SHA256 c920e0aed0fbef0c1f9088755a322356a8da1989dadbe4d7c014a3825472d1a7
 MISC metadata.xml 1004 RMD160 746f62b69544698c9046b49b401b921005d4a009 SHA1 df8ea2a7641b0183024365684b1fa908a08de26c SHA256 afcde7f0864d2b0ee7f796a474ac483bf270f40443bf7598215d7788f4291448
