@@ -2,6 +2,14 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Dec 2008; Justin Lecher (jlec) <jlec@j-schmitz.net> -pfl-1.7.ebuild,
+  -pfl-1.8.ebuild, +pfl-1.8_p20081201.ebuild:
+  added installation of e-file
+
+*pfl-1.8-r1 (23 Dec 2008)
+
+  23 Dec 2008;  <>  pfl-1.8-r1.ebuild
+
   04 Dec 2008; justin Lecher (jlec) <justin@j-schmitz.net> ChangeLog:
   test echangelog
 
